deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controlmyspa-porssari
  labels:
    app: controlmyspa-porssari
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controlmyspa-porssari
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: controlmyspa-porssari
    spec:
      containers:
        - name: controlmyspa-porssari
          image: ghcr.io/arska/controlmyspa-porssari:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 15
            failureThreshold: 5
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: controlmyspa-porssari-data
