deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlmyspa-porssari
  labels:
    app: controlmyspa-porssari
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: controlmyspa-porssari
