deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: controlmyspa-porssari
  labels:
    app: controlmyspa-porssari
spec:
  host: controlmyspa-porssari-aarno-playground.apps.exoscale-ch-gva-2-0.appuio.cloud
  to:
    kind: Service
    name: controlmyspa-porssari
  port:
    targetPort: 8080
  tls:
    termination: edge
